# youbot_robot

./: README.md
youbot_controllers/: CMakeLists.txt  package.xml
youbot_controllers/config/: base_joint_link_config.yaml
youbot_controllers/include/youbot_controllers/: base_trajectory_action.h  simple_base_position_controller.h  youbot_arm_controller.h
youbot_controllers/launch/: base_position_controller.launch
youbot_controllers/src/code_base/: base_trajectory_action.cpp  simple_base_position_controller.cpp  youbot_arm_controller.cpp
youbot_controllers/src/ros_nodes/: arm_position_control.cpp  base_position_controller.cpp  base_trajectory_action_server.cpp  manual_base_position_control.cpp  trajectory_test.cpp
youbot_description/robots/: youbot.urdf.xacro  youbot_planning_bot.urdf.xacro
youbot_description/urdf/youbot_base/: base.gazebo.xacro  base.urdf.xacro
youbot_description/urdf/youbot_fake_base/: fake_base.gazebo.xacro  fake_base.transmission.xacro  fake_base.urdf.xacro
youbot_simulation/youbot_gazebo_control/config/: fake_base_controller.yaml
youbot_simulation/youbot_gazebo_control/launch/: fake_base_controller.launch  joint_state_controller.launch
youbot_simulation/youbot_gazebo_robot/launch/: planning_youbot.launch  youbot.launch
youbot_simulation/youbot_gazebo_worlds/launch/: empty_world.launch
