<?xml version="1.0"?>
<package>
  <name>youbot_controllers</name>
  <version>0.0.0</version>
  <description>A set of control nodes for the KUKA youbot arm.</description>

  <maintainer email="islerstefan@bluewin.ch">Stefan Isler</maintainer>

  <license>GPLv3</license>

  <author email="islerstefan@bluewin.ch">Stefan Isler</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>angles</build_depend>
  <build_depend>brics_actuator</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>actionlib</build_depend>
  <run_depend>angles</run_depend>
  <run_depend>brics_actuator</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>actionlib</run_depend>

</package>